--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.0.0",
+    "react-vega": "^7.6.0",
+    "vega": "^6.1.2",
+    "vega-lite": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
