Add scrollama storytelling

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-scrollama": "^2.4.0",
     "react-vega": "^7.6.0",
     "vega": "^6.1.2",
     "vega-lite": "^6.1.0"
